--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="css/pure.css">
     <link rel="stylesheet" href="css/styles.css">
     <style>
+    #volume-section img { margin-top: 90px; margin-left: auto; margin-right: auto; display: block; }
+    #volume-section div { margin-left: auto; margin-right: auto; display: block; margin-bottom: 50px; }
+    .vol-block { margin-top: 95px; height: 20px; width: 20px; background: white; cursor: pointer; }
 
     </style>
 	<script src="js/scripts.js"></script>
@@ -31,10 +34,35 @@
 	</div>
 	<br><br><br><br><br><br>
 	<div class="pure-g">
-		<div class="pure-u-1" style=" margin: 0 auto; text-align: center;">
+		<div class="pure-u-1" style="margin: 0 auto; text-align: center;">
 			<button id="start" class="pure-button" style="font-size: 35px;" onclick="totalSeconds()">Start</button>
 			<button class="pure-button" style="font-size: 35px;" onclick="refresh()">Clear</button>
+			<audio id="alarm">
+				<source src="media/alarm_beep.wav" type="audio/wav">
+			</audio>
 		</div>
+	</div>
+	<div class="pure-g" id="volume-section" style="opacity: 0.1;">
+		<div class="pure-u-1-8"></div>
+		<div class="pure-u-1-8">
+			<img src="media/muted_32.png">
+		</div>
+		<div class="pure-u-1-8">
+			<div class="vol-block" id="block1"></div>
+		</div>
+		<div class="pure-u-1-8">
+			<div class="vol-block" id="block2"></div>
+		</div>
+		<div class="pure-u-1-8">
+			<div class="vol-block" id="block3"></div>
+		</div>
+		<div class="pure-u-1-8">
+			<div class="vol-block" id="block4"></div>
+		</div>
+		<div class="pure-u-1-8">
+			<img src="media/raise_32.png">
+		</div>
+		<div class="pure-u-1-8"></div>
 	</div>
 </body>
 </html>
